--- a/angular.json
+++ b/angular.json
@@ -20,11 +20,10 @@
             "tsConfig": "tsconfig.app.json",
             "aot": false,
             "assets": [
-              "src/favicon.ico",
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/vendor/styles.css",
             ],
             "scripts": []
           },
@@ -85,11 +84,10 @@
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
             "assets": [
-              "src/favicon.ico",
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/vendor/styles.css"
             ],
             "scripts": []
           }
@@ -120,6 +118,7 @@
           }
         }
       }
-    }},
+    }
+  },
   "defaultProject": "ingage-directory"
 }
