--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/common": "~8.2.14",
     "@angular/compiler": "~8.2.14",
     "@angular/core": "~8.2.14",
+    "@angular/fire": "^5.4.2",
     "@angular/forms": "~8.2.14",
     "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.14",
@@ -24,6 +25,7 @@
     "@angular/router": "~8.2.14",
     "angular-in-memory-web-api": "^0.9.0",
     "angularx-social-login": "^2.2.1",
+    "firebase": "^7.10.0",
     "hammerjs": "^2.0.8",
     "ngx-filter-pipe": "^2.1.2",
     "rxjs": "~6.4.0",
