--- a/angular.json
+++ b/angular.json
@@ -25,14 +25,40 @@
             "styles": [
               "src/vendor/styles.css",
             ],
-            "scripts": []
+            "scripts": [],
+            "fileReplacements": [
+              {
+                "replace": "src/assets/data-files/employee.json",
+                "with": "src/assets/data-files/employee.mock.json"
+              }
+            ]
           },
           "configurations": {
+            "default": {
+              "fileReplacements": [
+                {
+                  "replace": "src/assets/data-files/employee.json",
+                  "with": "src/assets/data-files/employee.mock.json"
+                }
+              ]
+            },
+            "test": {
+              "fileReplacements": [
+                {
+                  "replace": "src/assets/data-files/employee.json",
+                  "with": "src/assets/data-files/employee.test.json"
+                }
+              ]
+            },
             "production": {
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
                   "with": "src/environments/environment.prod.ts"
+                },
+                {
+                  "replace": "src/assets/data-files/employee.json",
+                  "with": "src/assets/data-files/employee.prod.json"
                 }
               ],
               "optimization": true,
@@ -65,6 +91,9 @@
             "browserTarget": "ingage-directory:build"
           },
           "configurations": {
+            "test": {
+              "browserTarget": "ingage-directory:build:test"
+            },
             "production": {
               "browserTarget": "ingage-directory:build:production"
             }
