--- a/package.json
+++ b/package.json
@@ -24,12 +24,16 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "angular-in-memory-web-api": "^0.9.0",
+    "angularfire2": "^5.4.2",
     "angularx-social-login": "^2.2.1",
-    "firebase": "^7.10.0",
+    "classlist.js": "^1.1.20150312",
+    "firebase": "^7.12.0",
     "hammerjs": "^2.0.8",
     "ngx-filter-pipe": "^2.1.2",
-    "rxjs": "~6.4.0",
+    "ngx-spinner": "^9.0.1",
+    "rxjs": "^6.5.4",
     "tslib": "^1.11.0",
+    "web-animations-js": "^2.3.2",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
