adding dev environment

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,6 @@
 {
   "projects": {
-    "default": "ingage-directory"
+    "default": "ingage-directory",
+    "development": "ingage-directory-dev"
   }
 }
