--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "deploy": "ng build --prod && firebase deploy"
+    "deploy": "ng build --prod && firebase deploy -P default",
+    "deploy-dev": "ng build && firebase deploy -P development"
   },
   "private": true,
   "dependencies": {
