--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,9 @@ Thumbs.db
 # employee json file, our 'database'
 src/assets/data-files/employee.prod.json
 src/assets/data-files/employee.test.json
+
+# environment files
+/src/environments
+src/environments/environment.prod.ts
+**/src/environments/environment.prod.ts
+src\environments
