--- a/.gitignore
+++ b/.gitignore
@@ -53,7 +53,4 @@ src/assets/data-files/employee.prod.json
 src/assets/data-files/employee.test.json
 
 # environment files
-/src/environments
-src/environments/environment.prod.ts
-**/src/environments/environment.prod.ts
-src\environments
+/src/environments/environment*.ts
