--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/vendor/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "src/vendor/styles.css"
             ],
             "scripts": [],
             "fileReplacements": [
