--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@ng-bootstrap/ng-bootstrap": "^5.3.1",
     "angular-in-memory-web-api": "^0.9.0",
     "angularfire2": "^5.4.2",
+    "bootstrap": "^4.5.0",
     "classlist.js": "^1.1.20150312",
     "firebase": "^7.14.6",
     "hammerjs": "^2.0.8",
