--- a/angular.json
+++ b/angular.json
@@ -24,6 +24,7 @@
             ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/@ng-select/ng-select/themes/ant.design.theme.css",
               "src/vendor/styles.css"
             ],
             "scripts": [],
