--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "@ng-bootstrap/ng-bootstrap": "^5.3.1",
+    "@ng-select/ng-select": "^3.7.3",
     "angular-in-memory-web-api": "^0.9.0",
     "angularfire2": "^5.4.2",
     "bootstrap": "^4.5.0",
