--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "angular-in-memory-web-api": "^0.9.0",
     "angularfire2": "^5.4.2",
     "classlist.js": "^1.1.20150312",
-    "firebase": "^7.14.6",
+    "firebase": "^7.15.0",
     "hammerjs": "^2.0.8",
     "ngx-filter-pipe": "^2.1.2",
     "ngx-spinner": "^9.0.1",
@@ -55,6 +55,7 @@
     "protractor": "^5.4.3",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.5.3"
+    "typescript": "~3.5.3",
+    "websocket-extensions": "^0.1.4"
   }
 }
