--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "firebase": "^7.15.0",
     "hammerjs": "^2.0.8",
     "ngx-filter-pipe": "^2.1.2",
+    "ngx-org-chart": "^1.1.1",
     "ngx-spinner": "^9.0.1",
     "rxjs": "^6.5.4",
     "tslib": "^1.13.0",
