--- a/src/assets/data-files/focusareas.prod.json
+++ b/src/assets/data-files/focusareas.prod.json
@@ -2,27 +2,22 @@
   {
     "focusarea": "Experience Design",
     "practicearea": "Design",
-    "practiceleademail": "david.mccoy@ingagepartners.com"
+    "practiceleademail": "scott.lindsten@ingagepartners.com"
   },
   {
     "focusarea": "Process Design",
     "practicearea": "Design",
-    "practiceleademail": ""
+    "practiceleademail": "david.prince@ingagepartners.com"
   },
   {
     "focusarea": "Agility",
     "practicearea": "Deliver",
-    "practiceleademail": "sharath.maramraju@ingagepartners.com"
+    "practiceleademail": "markku.koistila@ingagepartners.com"
   },
   {
     "focusarea": "Systems Quality",
     "practicearea": "Deliver",
     "practiceleademail": "andrea.dresmann@ingagepartners.com"
-  },
-  {
-    "focusarea": "Strategy",
-    "practicearea": "Deliver",
-    "practiceleademail": "matt.darpel@ingagepartners.com"
   },
   {
     "focusarea": "Front End",
@@ -37,7 +32,7 @@
   {
     "focusarea": "Cloud / DevOps",
     "practicearea": "Build",
-    "practiceleademail": "charles.retzler@ingagepartners.com"
+    "practiceleademail": "phil.lachmann@ingagepartners.com"
   },
   {
     "focusarea": "Test Automation",
